--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,8 +1,9 @@
 {
   "name": "coniferum-atlas",
   "compatibility_date": "2026-02-04",
-  "assets": {
-    "directory": "./dist"
+  "assets": { 
+    "directory": "./dist",
+    "binding": "ASSETS",
+    "not_found_handling": "single-page-application" 
   }
 }
-
